--- a/package.json
+++ b/package.json
@@ -44,27 +44,32 @@
   "devDependencies": {
     "@babel/core": "^7.24.0",
     "@babel/preset-env": "^7.24.0",
-    "@craco/craco": "^5.9.0",
+    "@craco/craco": "^7.1.0",
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
     "concurrently": "^8.2.2",
     "http-proxy-middleware": "^3.0.5",
     "jest": "^29.7.0",
     "nodemon": "^3.1.10",
-    "process": "^0.11.10"
+    "process": "^0.11.10",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "craco start",
-    "build": "craco build",
+    "start": "NODE_OPTIONS='--openssl-legacy-provider' craco start",
+    "build": "NODE_OPTIONS='--openssl-legacy-provider' craco build",
     "test": "craco test",
     "test:unit": "jest",
     "eject": "react-scripts eject",
     "server": "node server.js",
-    "start:frontend": "PORT=3002 craco start",
+    "start:frontend": "NODE_OPTIONS='--openssl-legacy-provider' PORT=3002 craco start",
     "start:backend": "PORT=3035 node backend/server.js",
     "dev": "concurrently \"npm run start:frontend\" \"npm run start:backend\""
   },
   "eslintConfig": {
     "extends": [
-      "react-app"
+      "react-app",
+      "react-app/jest"
     ]
   },
   "browserslist": {
