--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
     "eject": "react-scripts eject",
     "server": "node server.js",
     "start:frontend": "NODE_OPTIONS=--openssl-legacy-provider PORT=3002 craco start",
-    "start:backend": "PORT=3035 node backend/server.js",
+    "start:backend": "PORT=3035 node server.js",
     "dev": "concurrently \"npm run start:frontend\" \"npm run start:backend\""
   },
   "eslintConfig": {
