--- a/mysqlconnect.ini
+++ b/mysqlconnect.ini
@@ -1,7 +1,7 @@
 # MySQL 연결 정보
-DB_USER=root
-DB_PASS=          # 비밀번호가 없다면 비워 두세요
-DB_NAME=ubex_dev
+DB_USER=mysql
+DB_PASS=mysql
+DB_NAME=ubex
 DB_HOST=127.0.0.1
 
 # 이더리움 노드 URL
