--- a/package.json
+++ b/package.json
@@ -69,7 +69,7 @@
     "eject": "react-scripts eject",
     "server": "node server.js",
     "start:frontend": "cross-env NODE_OPTIONS=--openssl-legacy-provider PORT=3000 craco start",
-    "start:backend": "cross-env PORT=3035 node backend/server.js",
+    "start:backend": "cross-env PORT=3035 node server.js",
     "dev": "concurrently \"npm run start:frontend\" \"npm run start:backend\""
   },
   "eslintConfig": {
