--- a/package.json
+++ b/package.json
@@ -70,7 +70,8 @@
     "server": "node server.js",
     "start:frontend": "cross-env NODE_OPTIONS=--openssl-legacy-provider PORT=3000 craco start",
     "start:backend": "cross-env PORT=3035 node server.js",
-    "dev": "concurrently \"npm run start:frontend\" \"npm run start:backend\""
+    "dev": "concurrently \"npm run start:frontend\" \"npm run start:backend\"",
+    "seed": "sequelize-cli db:seed:all"
   },
   "eslintConfig": {
     "extends": [
