Add env template and scrub credentials

--- a/mysqlconnect.ini
+++ b/mysqlconnect.ini
@@ -1,9 +1,8 @@
-# MySQL 연결 정보
-DB_USER=mysql
-DB_PASS=mysql
+# MySQL connection template
+DB_USER=YOUR_DB_USER
+DB_PASS=YOUR_DB_PASS
 DB_NAME=ubex
 DB_HOST=127.0.0.1
 
-# 이더리움 노드 URL
-RPC_URL=https://mainnet.infura.io/v3/YOUR_INFURA_PROJECT_ID
-WS_RPC_URL=wss://mainnet.infura.io/ws/v3/YOUR_INFURA_PROJECT_ID
+# Ethereum node WebSocket URL
+WS_RPC_URL=ws://127.0.0.1:8545
