--- a/.env
+++ b/.env
@@ -4,3 +4,4 @@ DB_NAME=ubex
 DB_HOST=127.0.0.1
 REACT_APP_WS_URL=http://localhost:3035
 REACT_APP_USE_DUMMY_DATA=true
+WS_RPC_URL=wss://goerli.example.com/ws
