--- a/.env.example
+++ b/.env.example
@@ -14,3 +14,8 @@ WS_RPC_URL=ws://127.0.0.1:8545
 
 # Frontend API endpoint
 REACT_APP_API_URL=http://localhost:3035
+
+# Whitelist settings
+EMAIL_VERIFICATION=true
+WAITING_PERIOD=24
+INSTANT_CONFIRM=false
